--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "twostrokejs-syntax",
-	"displayName": "TwoStroke.js Syntax Rules",
-	"description": "TwoStroke.js Syntax Rules file support",
+	"name": "3se-tools",
+	"displayName": "Three Syntax Engine",
+	"description": "Tooling for 3SE files",
 	"icon": "img/logo.png",
 	"preview": true,
 	"publisher": "DimaCrafter",
@@ -9,9 +9,9 @@
 		"name": "Dmitriy Shiryaev",
 		"email": "backup.dimacrafter@gmail.com"
 	},
-	"repository": "https://github.com/DimaCrafter/twostrokejs-syntax.git",
+	"repository": "https://github.com/DimaCrafter/three-syntax-engine-vscode.git",
 	"license": "MIT",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"engines": {
 		"vscode": "^1.63.0"
 	},
@@ -19,23 +19,23 @@
 		"Programming Languages"
 	],
 	"activationEvents": [
-        "onLanguage:twostrokejs-syntax"
+        "onLanguage:3se-rules"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"languages": [
 			{
-				"id": "twostrokejs-syntax",
-				"aliases": ["TwoStroke.js Syntax Rules", "tss"],
-				"extensions": [".tss"],
-				"configuration": "./syntaxes/tss.config.json"
+				"id": "3se-rules",
+				"aliases": ["3SE rules", "3se"],
+				"extensions": [".3se"],
+				"configuration": "./syntaxes/3se-rules.config.json"
 			}
 		],
 		"grammars": [
 			{
-				"language": "twostrokejs-syntax",
-				"scopeName": "source.twostrokejs-syntax",
-				"path": "./syntaxes/tss.tmLanguage.json"
+				"language": "3se-rules",
+				"scopeName": "source.3se-rules",
+				"path": "./syntaxes/3se-rules.tmLanguage.json"
 			}
 		]
 	},
